bundle/config/base/namespace.yml
#@ load("@ytt:data", "data")

#@ if/end data.values.namespace.owner:
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.namespace.name
